--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
                     <div class="subtitle1">ningun mensaje fue encontrado</div>
                     <div class="subtitle2">ingrese el texto que desea encriptar o desencriptar</div>
                 </div>
-                <div class ="container-traduccion-text display"></div>
-                <button class="buton-copiar display">Copiar</button>
+                <div class ="container-traduccion-text display" id="texto"></div>
+                <div class="container-copiar display">
+                    <button class="buton-copiar">Copiar</button>
+                </div>
             </div>
         </div>
     </div>
